added tasks notebooks and fixed readme for intensity

--- a/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
+++ b/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "id": "RiXz_epEr7qQ",
     "scrolled": true
@@ -259,32 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "id": "lzNXJ-s6r7qQ",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "0        [0, 0, 1, 0, 0, 0]\n",
-      "1        [0, 1, 0, 0, 0, 0]\n",
-      "2        [0, 0, 1, 0, 0, 0]\n",
-      "3        [0, 0, 1, 0, 0, 0]\n",
-      "4        [0, 0, 1, 0, 0, 0]\n",
-      "                ...        \n",
-      "18259    [0, 1, 0, 0, 0, 0]\n",
-      "18260    [0, 1, 0, 0, 0, 0]\n",
-      "18261    [0, 0, 1, 0, 0, 0]\n",
-      "18262    [0, 1, 0, 0, 0, 0]\n",
-      "18263    [0, 0, 1, 0, 0, 0]\n",
-      "Name: precursor_charge_onehot, Length: 18264, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
@@ -304,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -313,25 +293,14 @@
     "outputId": "16a1d57b-7720-4cb1-cdea-a32d9d2c3804",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Training examples', 14656)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     " \"Training examples\", BATCH_SIZE * len(int_data.train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -340,18 +309,7 @@
     "outputId": "95550088-76c5-4f1b-8181-dddb942d94b0",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Validation examples', 3712)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"Validation examples\", BATCH_SIZE * len(int_data.val_data)"
    ]
@@ -371,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "id": "Q8SGTvfRr7qT",
     "scrolled": true
@@ -383,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "id": "ZqrsF6APr7qU",
     "scrolled": true
@@ -406,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "id": "IkPIHuWEr7qU",
     "scrolled": true
@@ -417,12 +375,13 @@
     "\n",
     "import tensorflow as tf\n",
     "from dlomix.eval import TimeDeltaMetric\n",
-    "from dlomix.losses import masked_spectral_distance"
+    "from dlomix.losses import masked_spectral_distance, pearson_correlation\n",
+    "tf.get_logger().setLevel('ERROR')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "id": "xLy32wk7r7qU",
     "scrolled": true
@@ -435,7 +394,7 @@
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom timedelta metric\n",
     "model.compile(optimizer=optimizer,\n",
     "              loss=masked_spectral_distance,\n",
-    "              metrics=['mse'])"
+    "              metrics=['mse',pearson_correlation])"
    ]
   },
   {
@@ -458,221 +417,19 @@
     "outputId": "4455efd2-161b-4dff-e747-6db1724defbb",
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.13.10"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>D:\\Compmass\\dlomix-resources\\notebooks\\Intensity\\wandb\\run-20230224_125340-u2ctska4</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/prosit-compms/dlomix_intensity/runs/u2ctska4' target=\"_blank\">walktrough</a></strong> to <a href='https://wandb.ai/prosit-compms/dlomix_intensity' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/prosit-compms/dlomix_intensity' target=\"_blank\">https://wandb.ai/prosit-compms/dlomix_intensity</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/prosit-compms/dlomix_intensity/runs/u2ctska4' target=\"_blank\">https://wandb.ai/prosit-compms/dlomix_intensity/runs/u2ctska4</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/Cast:0' shape=(None, 1) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/Cast_1:0' shape=(None, 6) dtype=float32>]\n",
-      "Consider rewriting this model with the Functional API.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/Cast:0' shape=(None, 1) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/Cast_1:0' shape=(None, 6) dtype=float32>]\n",
-      "Consider rewriting this model with the Functional API.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "encoded sequence:  Tensor(\"prosit_intensity_predictor/string_lookup/Identity:0\", shape=(None, 30), dtype=int64)\n",
-      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/encoder_att/Sum_1:0' shape=(None, 512) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/sequential/meta_dense_do/dropout/Mul_1:0' shape=(None, 512) dtype=float32>]\n",
-      "Consider rewriting this model with the Functional API.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/encoder_att/Sum_1:0' shape=(None, 512) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/sequential/meta_dense_do/dropout/Mul_1:0' shape=(None, 512) dtype=float32>]\n",
-      "Consider rewriting this model with the Functional API.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/Cast:0' shape=(None, 1) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/Cast_1:0' shape=(None, 6) dtype=float32>]\n",
-      "Consider rewriting this model with the Functional API.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/Cast:0' shape=(None, 1) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/Cast_1:0' shape=(None, 6) dtype=float32>]\n",
-      "Consider rewriting this model with the Functional API.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "encoded sequence:  Tensor(\"prosit_intensity_predictor/string_lookup/Identity:0\", shape=(None, 30), dtype=int64)\n",
-      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/encoder_att/Sum_1:0' shape=(None, 512) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/sequential/meta_dense_do/dropout/Mul_1:0' shape=(None, 512) dtype=float32>]\n",
-      "Consider rewriting this model with the Functional API.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Layers in a Sequential model should only have a single input tensor, but we receive a <class 'list'> input: [<tf.Tensor 'prosit_intensity_predictor/encoder_att/Sum_1:0' shape=(None, 512) dtype=float32>, <tf.Tensor 'prosit_intensity_predictor/sequential/meta_dense_do/dropout/Mul_1:0' shape=(None, 512) dtype=float32>]\n",
-      "Consider rewriting this model with the Functional API.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 57/229 [======>.......................] - ETA: 1:40 - loss: 0.6561 - mse: 2.2714"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wandb.init(project=project_name, name='walktrough')\n",
     "history = model.fit(int_data.train_data,\n",
     "                    validation_data=int_data.val_data,\n",
-    "                    epochs=1,callbacks=[WandbCallback()])"
+    "                    epochs=15,callbacks=[WandbCallback(save_model=False)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3e574219af848c7b489f8c532a2c17e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='45.262 MB of 45.262 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, m…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁</td></tr><tr><td>loss</td><td>▁</td></tr><tr><td>mse</td><td>▁</td></tr><tr><td>val_loss</td><td>▁</td></tr><tr><td>val_mse</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>best_epoch</td><td>0</td></tr><tr><td>best_val_loss</td><td>0.62441</td></tr><tr><td>epoch</td><td>0</td></tr><tr><td>loss</td><td>0.73405</td></tr><tr><td>mse</td><td>1.97952</td></tr><tr><td>val_loss</td><td>0.62441</td></tr><tr><td>val_mse</td><td>2.5578</td></tr></table><br/></div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">walktrhough</strong> at: <a href='https://wandb.ai/prosit-compms/dlomix_intensity/runs/dpwsufjw' target=\"_blank\">https://wandb.ai/prosit-compms/dlomix_intensity/runs/dpwsufjw</a><br/>Synced 5 W&B file(s), 1 media file(s), 4 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20230224_124616-dpwsufjw\\logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Mark the run as finished\n",
     "\n",
@@ -753,10 +510,10 @@
    },
    "outputs": [],
    "source": [
-    "predictions_df['sequences'] = test_rtdata.sequences\n",
+    "predictions_df['sequences'] = test_int_data.sequences\n",
     "predictions_df['intensities_pred'] = predictions.tolist()\n",
-    "predictions_df['precursor_charge_onehot'] = test_rtdata.precursor_charge.tolist()\n",
-    "predictions_df['intensities_raw'] = test_rtdata.intensities.tolist()\n"
+    "predictions_df['precursor_charge_onehot'] = test_int_data.precursor_charge.tolist()\n",
+    "predictions_df['intensities_raw'] = test_int_data.intensities.tolist()\n"
    ]
   },
   {
