--- a/notebooks/Intensity/tasks/1_LearningRate.ipynb
+++ b/notebooks/Intensity/tasks/1_LearningRate.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retention Time Preidiction \n",
+    "# Fragment ion intensities Prediction \n",
     "\n",
     "This notebook is prepared to be run in Google [Colaboratory](https://colab.research.google.com/). In order to train the model faster, please change the runtime of Colab to use Hardware Accelerator, either GPU or TPU.\n",
     "\n",
-    "This is an extension of the original walkthrough example available [here](https://github.com/wilhelm-lab/dlomix-resources/blob/main/notebooks/Example_RTModel_Walkthrough_colab.ipynb)."
+    "This is an extension of the original walkthrough example available [here](https://github.com/wilhelm-lab/dlomix-resources/tree/tasks/intensity/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb)."
    ]
   },
   {
@@ -35,21 +35,44 @@
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q dlomix==0.0.3"
+    "!python -m pip install -q git+https://github.com/wilhelm-lab/dlomix.git@feature/intensity_tutorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m pip install -q wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import dlomix\n",
-    "from dlomix.models import RetentionTimePredictor\n",
+    "from dlomix.models import PrositIntensityPredictor\n",
     "import tensorflow as tf\n",
-    "from dlomix.eval import TimeDeltaMetric"
+    "from dlomix.losses import masked_spectral_distance, pearson_correlation\n",
+    "tf.get_logger().setLevel('ERROR')\n",
+    "\n",
+    "import wandb\n",
+    "from wandb.keras import WandbCallback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# enter project name for weights and biases\n",
+    "project_name = 'dlomix_intensity'"
    ]
   },
   {
@@ -58,13 +81,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dlomix.data import RetentionTimeDataset\n",
+    "from dlomix.data import IntensityDataset\n",
     "\n",
-    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomTools_train_val.csv'\n",
+    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "rtdata = RetentionTimeDataset(data_source=TRAIN_DATAPATH,\n",
-    "                              seq_length=30, batch_size=BATCH_SIZE, val_ratio=0.2, test=False)"
+    "int_data = IntensityDataset(data_source=TRAIN_DATAPATH,\n",
+    "                              seq_length=30, collision_energy_col='collision_energy', batch_size=BATCH_SIZE, val_ratio=0.2, test=False)"
    ]
   },
   {
@@ -82,17 +105,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Enter weights and biases run name. Make sure that different learning rates have different run names.\n",
+    "wandb.init(project=project_name, name='learning_rate')\n",
+    "\n",
     "# create model\n",
-    "model = RetentionTimePredictor(seq_length=30)\n",
+    "model = PrositIntensityPredictor(seq_length=30)\n",
     "\n",
     "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-4)\n",
     "\n",
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
-    "            loss='mse', metrics=['mean_absolute_error', TimeDeltaMetric()])\n",
+    "            loss=masked_spectral_distance, metrics=[pearson_correlation,'mean_absolute_error', 'mse'])\n",
     "\n",
-    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)"
+    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15\n",
+    "                    ,callbacks=[WandbCallback(save_model=False)])\n",
+    "\n",
+    "\n",
+    "# Mark the run as finished\n",
+    "wandb.finish()"
    ]
   }
  ],
@@ -112,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.6.12"
   },
   "vscode": {
    "interpreter": {
