--- a/notebooks/Intensity/tasks/4_DataSplit.ipynb
+++ b/notebooks/Intensity/tasks/4_DataSplit.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retention Time Preidiction \n",
+    "# Fragment ion intensities Prediction \n",
     "\n",
     "This notebook is prepared to be run in Google [Colaboratory](https://colab.research.google.com/). In order to train the model faster, please change the runtime of Colab to use Hardware Accelerator, either GPU or TPU.\n",
     "\n",
-    "This is an extension of the original walkthrough example available [here](https://github.com/wilhelm-lab/dlomix-resources/blob/main/notebooks/Example_RTModel_Walkthrough_colab.ipynb)."
+    "This is an extension of the original walkthrough example available [here](https://github.com/wilhelm-lab/dlomix-resources/tree/tasks/intensity/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb)."
    ]
   },
   {
@@ -35,7 +35,16 @@
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q dlomix==0.0.3"
+    "!python -m pip install -q git+https://github.com/wilhelm-lab/dlomix.git@feature/intensity_tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m pip install -q wandb"
    ]
   },
   {
@@ -47,9 +56,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import dlomix\n",
-    "from dlomix.models import RetentionTimePredictor\n",
+    "from dlomix.models import PrositIntensityPredictor\n",
     "import tensorflow as tf\n",
-    "from dlomix.eval import TimeDeltaMetric"
+    "from dlomix.losses import masked_spectral_distance, pearson_correlation\n",
+    "tf.get_logger().setLevel('ERROR')\n",
+    "\n",
+    "import wandb\n",
+    "from wandb.keras import WandbCallback"
    ]
   },
   {
@@ -59,7 +72,6 @@
     "The code below creates a dataset, creates the model, and trains it. You should try with the two available data splits (`split_a` and `split_b`). Please Refer to the initial notebook to analyze the results.\n",
     "\n",
     "Hint: Use the paths available below. Description for splits is as follows:\n",
-    "- suffix `_DATAPATH`: the original split used in the intial walkthrough notebook.\n",
     "- suffix `_A`: split A\n",
     "- suffix `_B`: split B"
    ]
@@ -70,13 +82,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomTools_train_val.csv'\n",
-    "TRAIN_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/split_a/proteomTools_train_val_a.csv'\n",
-    "TRAIN_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/split_b/proteomTools_train_val_b.csv'\n",
+    "TRAIN_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/split_a/proteomeTools_train_val_a.csv'\n",
+    "TRAIN_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/split_b/proteomeTools_train_val_b.csv'\n",
     "\n",
-    "TEST_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomTools_test.csv'\n",
-    "TEST_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/split_a/proteomTools_test_a.csv'\n",
-    "TEST_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/split_b/proteomTools_test_b.csv'"
+    "TEST_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/split_a/proteomeTools_test_a.csv'\n",
+    "TEST_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/tasks/intensity/example_datasets/Intensity/split_b/proteomeTools_test_b.csv'"
    ]
   },
   {
@@ -85,19 +95,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dlomix.data import RetentionTimeDataset\n",
+    "from dlomix.data import IntensityDataset\n",
     "\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "rtdata = RetentionTimeDataset(data_source=TRAIN_DATAPATH,\n",
-    "                              seq_length=30, batch_size=BATCH_SIZE, val_ratio=0.2)\n",
+    "rtdata = RetentionTimeDataset(data_source=TRAIN_DATAPATH_A,\n",
+    "                              seq_length=30, collision_energy_col='collision_energy',batch_size=BATCH_SIZE, val_ratio=0.2)\n",
     "\n",
     "\n",
     "# this is the test dataset object, do not forget to change it to the respective suffix (A or B)\n",
     "# when you change the training dataset\n",
     "\n",
-    "test_rtdata = RetentionTimeDataset(data_source=TEST_DATAPATH,\n",
-    "                              seq_length=30, batch_size=BATCH_SIZE, test=True)"
+    "test_rtdata = RetentionTimeDataset(data_source=TEST_DATAPATH_A,\n",
+    "                              seq_length=30, collision_energy_col='collision_energy',batch_size=BATCH_SIZE, test=True)"
    ]
   },
   {
@@ -106,17 +116,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create model\n",
-    "model = RetentionTimePredictor(seq_length=30)\n",
+    "# Enter weights and biases run name. Make sure that different datasets splits have different names.\n",
+    "wandb.init(project=project_name, name='splits_a')\n",
     "\n",
-    "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-4)\n",
+    "# create model\n",
+    "model = PrositIntensityPredictor(seq_length=30)\n",
+    "\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-2)\n",
     "\n",
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
-    "            loss='mse', metrics=['mean_absolute_error', TimeDeltaMetric()])\n",
+    "            loss=masked_spectral_distance, metrics=[pearson_correlation,'mean_absolute_error', 'mse'])\n",
     "\n",
-    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)"
+    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15,\n",
+    "                    callbacks=[WandbCallback(save_model=False)])\n",
+    "\n",
+    "\n",
+    "# Mark the run as finished\n",
+    "wandb.finish()"
    ]
   },
   {
@@ -151,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
