fix intensity notebooks

--- a/notebooks/Intensity/tasks/1_LearningRate.ipynb
+++ b/notebooks/Intensity/tasks/1_LearningRate.ipynb
@@ -111,14 +111,14 @@
     "# create model\n",
     "model = PrositIntensityPredictor(seq_length=30)\n",
     "\n",
-    "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-4)\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=1e-4)\n",
     "\n",
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
     "            loss=masked_spectral_distance, metrics=[pearson_correlation,'mean_absolute_error', 'mse'])\n",
     "\n",
-    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15\n",
+    "history = model.fit(int_data.train_data, validation_data=int_data.val_data, epochs=15\n",
     "                    ,callbacks=[WandbCallback(save_model=False)])\n",
     "\n",
     "\n",
