--- a/notebooks/Intensity/tasks/4_DataSplit.ipynb
+++ b/notebooks/Intensity/tasks/4_DataSplit.ipynb
@@ -99,14 +99,14 @@
     "\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "rtdata = RetentionTimeDataset(data_source=TRAIN_DATAPATH_A,\n",
+    "int_data = RetentionTimeDataset(data_source=TRAIN_DATAPATH_A,\n",
     "                              seq_length=30, collision_energy_col='collision_energy',batch_size=BATCH_SIZE, val_ratio=0.2)\n",
     "\n",
     "\n",
     "# this is the test dataset object, do not forget to change it to the respective suffix (A or B)\n",
     "# when you change the training dataset\n",
     "\n",
-    "test_rtdata = RetentionTimeDataset(data_source=TEST_DATAPATH_A,\n",
+    "int_data = RetentionTimeDataset(data_source=TEST_DATAPATH_A,\n",
     "                              seq_length=30, collision_energy_col='collision_energy',batch_size=BATCH_SIZE, test=True)"
    ]
   },
@@ -129,7 +129,7 @@
     "model.compile(optimizer=optimizer, \n",
     "            loss=masked_spectral_distance, metrics=[pearson_correlation,'mean_absolute_error', 'mse'])\n",
     "\n",
-    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15,\n",
+    "history = model.fit(int_data.train_data, validation_data=int_data.val_data, epochs=15,\n",
     "                    callbacks=[WandbCallback(save_model=False)])\n",
     "\n",
     "\n",
