fix pearson correlation loss and remove ce_calibration notebook

--- a/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
+++ b/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
@@ -375,7 +375,7 @@
     "\n",
     "import tensorflow as tf\n",
     "from dlomix.eval import TimeDeltaMetric\n",
-    "from dlomix.losses import masked_spectral_distance, pearson_correlation\n",
+    "from dlomix.losses import masked_spectral_distance, masked_pearson_correlation_distance\n",
     "tf.get_logger().setLevel('ERROR')"
    ]
   },
@@ -394,7 +394,7 @@
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom timedelta metric\n",
     "model.compile(optimizer=optimizer,\n",
     "              loss=masked_spectral_distance,\n",
-    "              metrics=['mse',pearson_correlation])"
+    "              metrics=['mse',masked_pearson_correlation_distance])"
    ]
   },
   {
