--- a/notebooks/Intensity/tasks/1_LearningRate.ipynb
+++ b/notebooks/Intensity/tasks/1_LearningRate.ipynb
@@ -58,7 +58,7 @@
     "import dlomix\n",
     "from dlomix.models import PrositIntensityPredictor\n",
     "import tensorflow as tf\n",
-    "from dlomix.losses import masked_spectral_distance, pearson_correlation\n",
+    "from dlomix.losses import masked_spectral_distance, masked_pearson_correlation_distance\n",
     "tf.get_logger().setLevel('ERROR')\n",
     "\n",
     "import wandb\n",
@@ -116,7 +116,7 @@
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
-    "            loss=masked_spectral_distance, metrics=[pearson_correlation,'mean_absolute_error', 'mse'])\n",
+    "            loss=masked_spectral_distance, metrics=[masked_pearson_correlation_distance,'mean_absolute_error', 'mse'])\n",
     "\n",
     "history = model.fit(int_data.train_data, validation_data=int_data.val_data, epochs=15\n",
     "                    ,callbacks=[WandbCallback(save_model=False)])\n",
