--- a/notebooks/Intensity/tasks/2_LossFunction.ipynb
+++ b/notebooks/Intensity/tasks/2_LossFunction.ipynb
@@ -160,7 +160,7 @@
     "import dlomix\n",
     "from dlomix.models import PrositIntensityPredictor\n",
     "import tensorflow as tf\n",
-    "from dlomix.losses import masked_spectral_distance, pearson_correlation\n",
+    "from dlomix.losses import masked_spectral_distance, masked_pearson_correlation_distance\n",
     "tf.get_logger().setLevel('ERROR')\n",
     "\n",
     "import wandb\n",
@@ -401,7 +401,7 @@
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
-    "            loss=loss_function, metrics=[pearson_correlation])\n",
+    "            loss=loss_function, metrics=[masked_pearson_correlation_distance])\n",
     "\n",
     "history = model.fit(int_data.train_data, validation_data=int_data.val_data, epochs=15\n",
     "                    , callbacks=[WandbCallback(save_model=False)])\n",
