--- a/notebooks/RetentionTime/tasks/4_DataSplit.ipynb
+++ b/notebooks/RetentionTime/tasks/4_DataSplit.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,7 +9,7 @@
     "\n",
     "This notebook is prepared to be run in Google [Colaboratory](https://colab.research.google.com/). In order to train the model faster, please change the runtime of Colab to use Hardware Accelerator, either GPU or TPU.\n",
     "\n",
-    "This is an extension of the original walkthrough example available [here](https://github.com/wilhelm-lab/dlomix-resources/blob/main/notebooks/Example_RTModel_Walkthrough_colab.ipynb)."
+    "This is an extension of the original walkthrough example available [here](https://github.com/wilhelm-lab/dlomix-resources/blob/main/notebooks/RetentionTime/Example_RTModel_Walkthrough_colab.ipynb)."
    ]
   },
   {
@@ -40,6 +41,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m pip install -q wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -49,7 +59,20 @@
     "import dlomix\n",
     "from dlomix.models import RetentionTimePredictor\n",
     "import tensorflow as tf\n",
-    "from dlomix.eval import TimeDeltaMetric"
+    "from dlomix.eval import TimeDeltaMetric\n",
+    "\n",
+    "import wandb\n",
+    "from wandb.keras import WandbCallback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# enter project name for weights and biases\n",
+    "project_name = 'dlomix_retention_time'"
    ]
   },
   {
@@ -106,6 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Enter weights and biases run name. Make sure that different splits rates have different run names.\n",
+    "wandb.init(project=project_name, name='data_split_name')\n",
+    "\n",
     "# create model\n",
     "model = RetentionTimePredictor(seq_length=30)\n",
     "\n",
@@ -116,7 +142,11 @@
     "model.compile(optimizer=optimizer, \n",
     "            loss='mse', metrics=['mean_absolute_error', TimeDeltaMetric()])\n",
     "\n",
-    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)"
+    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)\n",
+    "\n",
+    "\n",
+    "# Mark the run as finished\n",
+    "wandb.finish()"
    ]
   },
   {
@@ -151,7 +181,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
