updated intensity walkthrough notebook

--- a/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
+++ b/notebooks/Intensity/Example_IntensityModel_Walkthrough_colab.ipynb
@@ -26,110 +26,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy\n",
-    "import functools\n",
-    "import dlomix.losses as losses\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "\n",
-    "def reshape_dims(array):\n",
-    "    n, dims = array.shape\n",
-    "    assert dims == 174\n",
-    "    nlosses = 1\n",
-    "    return array.reshape(\n",
-    "        [array.shape[0], 30 - 1, 2, nlosses, 3]\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def reshape_flat(array):\n",
-    "    s = array.shape\n",
-    "    flat_dim = [s[0], functools.reduce(lambda x, y: x * y, s[1:], 1)]\n",
-    "    return array.reshape(flat_dim)\n",
-    "\n",
-    "\n",
-    "def normalize_base_peak(array):\n",
-    "    # flat\n",
-    "    maxima = array.max(axis=1)\n",
-    "    array = array / maxima[:, numpy.newaxis]\n",
-    "    return array\n",
-    "\n",
-    "\n",
-    "def mask_outofrange(array, lengths, mask=-1.):\n",
-    "    # dim\n",
-    "    for i in range(array.shape[0]):\n",
-    "        array[i, lengths[i] - 1 :, :, :, :] = mask\n",
-    "    return array\n",
-    "\n",
-    "\n",
-    "def mask_outofcharge(array, charges, mask=-1.):\n",
-    "    # dim\n",
-    "    for i in range(array.shape[0]):\n",
-    "        if charges[i] < 3:\n",
-    "            array[i, :, :, :, charges[i] :] = mask\n",
-    "    return array\n",
-    "\n",
-    "\n",
-    "def get_spectral_angle(true, pred, batch_size=600):\n",
-    "\n",
-    "    n = true.shape[0]\n",
-    "    sa = numpy.zeros([n])\n",
-    "\n",
-    "    def iterate():\n",
-    "        if n > batch_size:\n",
-    "            for i in range(n // batch_size):\n",
-    "                true_sample = true[i * batch_size : (i + 1) * batch_size]\n",
-    "                pred_sample = pred[i * batch_size : (i + 1) * batch_size]\n",
-    "                yield i, true_sample, pred_sample\n",
-    "            i = n // batch_size\n",
-    "            yield i, true[(i) * batch_size :], pred[(i) * batch_size :]\n",
-    "        else:\n",
-    "            yield 0, true, pred\n",
-    "\n",
-    "    for i, t_b, p_b in iterate():\n",
-    "        tf.compat.v1.reset_default_graph()\n",
-    "        with tf.compat.v1.Session() as s:\n",
-    "            sa_graph = losses.masked_spectral_distance(t_b, p_b)\n",
-    "            sa_b = 1 - s.run(sa_graph)\n",
-    "            sa[i * batch_size : i * batch_size + sa_b.shape[0]] = sa_b\n",
-    "    sa = numpy.nan_to_num(sa)\n",
-    "    return sa\n",
-    "\n",
-    "\n",
-    "def normalize_predictions(data, batch_size=600):\n",
-    "    assert \"sequences\" in data\n",
-    "    assert \"intensities_pred\" in data\n",
-    "    assert \"precursor_charge_onehot\" in data\n",
-    "\n",
-    "    sequence_lengths = data[\"sequences\"].apply(lambda x: len(x))\n",
-    "    intensities =  np.stack(data[\"intensities_pred\"].to_numpy()).astype(np.float32)\n",
-    "    precursor_charge_onehot = np.stack(data[\"precursor_charge_onehot\"].to_numpy())\n",
-    "    charges = list(precursor_charge_onehot.argmax(axis=1) + 1)\n",
-    "\n",
-    "    intensities[intensities < 0] = 0\n",
-    "    intensities = reshape_dims(intensities)\n",
-    "    intensities = mask_outofrange(intensities, sequence_lengths)\n",
-    "    intensities = mask_outofcharge(intensities, charges)\n",
-    "    intensities = reshape_flat(intensities)\n",
-    "    m_idx = intensities == -1\n",
-    "    intensities = normalize_base_peak(intensities)\n",
-    "    intensities[m_idx] = -1\n",
-    "    data[\"intensities_pred\"] = intensities\n",
-    "\n",
-    "    if \"intensities_raw\" in data:\n",
-    "        data[\"spectral_angle\"] = get_spectral_angle(\n",
-    "            np.stack(data[\"intensities_raw\"].to_numpy()).astype(np.float32), intensities, batch_size=batch_size\n",
-    "        )\n",
-    "    return data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
@@ -141,7 +37,7 @@
    "source": [
     "# install the DLOmix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q dlomix==0.0.3"
+    "!python -m pip install -q git+https://github.com/wilhelm-lab/dlomix.git@feature/intensity_tutorial"
    ]
   },
   {
@@ -483,12 +379,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_df = pd.DataFrame()"
+    "from dlomix.reports import IntensityReport\n",
+    "\n",
+    "# create a report object by passing the history object and plot different metrics\n",
+    "report = IntensityReport(output_path=\"./output\", history=history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you can generate a complete report for intensity by calling generate_report\n",
+    "# the function takes the test dataset object and the predictions as arguments\n",
+    "\n",
+    "report.generate_report(test_int_data, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you can also manually see the results by calling other utility functions\n",
+    "from dlomix.reports.postprocessing import normalize_intensity_predictions\n",
+    "\n",
+    "\n",
+    "predictions_df = report.generate_intensity_results_df(test_int_data, predictions)\n",
+    "predictions_df.head()"
    ]
   },
   {
@@ -499,7 +429,8 @@
    },
    "outputs": [],
    "source": [
-    "predictions"
+    "predictions_acc = normalize_intensity_predictions(predictions_df)\n",
+    "predictions_acc.head()"
    ]
   },
   {
@@ -507,31 +438,6 @@
    "execution_count": null,
    "metadata": {
     "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "predictions_df['sequences'] = test_int_data.sequences\n",
-    "predictions_df['intensities_pred'] = predictions.tolist()\n",
-    "predictions_df['precursor_charge_onehot'] = test_int_data.precursor_charge.tolist()\n",
-    "predictions_df['intensities_raw'] = test_int_data.intensities.tolist()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "predictions_acc = normalize_predictions(predictions_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -546,17 +452,8 @@
    },
    "outputs": [],
    "source": [
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "import seaborn as sns\n",
+    "\n",
     "sns.violinplot(predictions_acc['spectral_angle'])"
    ]
   }
@@ -582,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
