--- a/notebooks/RetentionTime/tasks/3_ModelArchitecture.ipynb
+++ b/notebooks/RetentionTime/tasks/3_ModelArchitecture.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below creates a model and trains it. You should try out different loss functions and observe the impact on the training. Please Refer to the initial notebook to analyze the results.\n",
+    "The code below creates a model and trains it. You should try out different model architectures and observe the impact on the training. Please Refer to the initial notebook to analyze the results.\n",
     "\n",
     "Hint: Change `embedding_dim` size and `encoder` and explore how this would change the model performance. The parameter `embedding_dim` is the size of vector representing each Amino Acid, the higher it is, the more representative power it has. The `encoder` parameter determines the type of encoder that follows the embeddings' layer. \n",
     "\n",
@@ -149,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.6.12"
   },
   "vscode": {
    "interpreter": {
