fixed data sets names and added wandb callback to retention time notebooks

--- a/notebooks/RetentionTime/tasks/3_ModelArchitecture.ipynb
+++ b/notebooks/RetentionTime/tasks/3_ModelArchitecture.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "from dlomix.data import RetentionTimeDataset\n",
     "\n",
-    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomTools_train_val.csv'\n",
+    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
     "\n",
     "rtdata = RetentionTimeDataset(data_source=TRAIN_DATAPATH,\n",
@@ -125,7 +125,8 @@
     "model.compile(optimizer=optimizer, \n",
     "            loss='mse', metrics=[TimeDeltaMetric()])\n",
     "\n",
-    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)\n",
+    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15,\n",
+    "                   callbacks=[WandbCallback(save_model=False)])\n",
     "\n",
     "# Mark the run as finished\n",
     "wandb.finish()"
