--- a/notebooks/RetentionTime/tasks/2_LossFunction.ipynb
+++ b/notebooks/RetentionTime/tasks/2_LossFunction.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -83,7 +82,7 @@
    "source": [
     "from dlomix.data import RetentionTimeDataset\n",
     "\n",
-    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomTools_train_val.csv'\n",
+    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomeTools_train_val.csv'\n",
     "BATCH_SIZE = 64\n",
     "\n",
     "rtdata = RetentionTimeDataset(data_source=TRAIN_DATAPATH,\n",
@@ -120,7 +119,8 @@
     "model.compile(optimizer=optimizer, \n",
     "            loss=loss_function, metrics=[TimeDeltaMetric()])\n",
     "\n",
-    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15)\n",
+    "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15,\n",
+    "                   callbacks=[WandbCallback(save_model=False)])\n",
     "\n",
     "# Mark the run as finished\n",
     "wandb.finish()"
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.6.12"
   },
   "vscode": {
    "interpreter": {
