--- a/notebooks/RetentionTime/tasks/5_Calibration.ipynb
+++ b/notebooks/RetentionTime/tasks/5_Calibration.ipynb
@@ -21,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,27 +70,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below creates a dataset, creates the model, and trains it. You should try with the two available data splits (`split_a` and `split_b`). Please Refer to the initial notebook to analyze the results.\n",
+    "The code below creates a dataset, creates the model, and trains it. You should try with the two available data splits (`feature_a` and `feature_b`). Please Refer to the initial notebook to analyze the results.\n",
     "\n",
-    "Hint: Use the paths available below. Description for splits is as follows:\n",
-    "- suffix `_DATAPATH`: the original split used in the intial walkthrough notebook.\n",
-    "- suffix `_A`: split A\n",
-    "- suffix `_B`: split B"
+    "Hint: Use the paths available below. Description for features is as follows:\n",
+    "- suffix `_A`: feature A\n",
+    "- suffix `_B`: feature B\n",
+    "\n",
+    "**Different features span through different ranges the absolute losses/metrics might be misleading**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomeTools_train_val.csv'\n",
-    "TRAIN_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/split_a/proteomeTools_train_val_a.csv'\n",
-    "TRAIN_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/split_b/proteomeTools_train_val_b.csv'\n",
+    "TRAIN_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/feature_a/proteomeTools_train_val_a.csv'\n",
+    "TRAIN_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/feature_b/proteomeTools_train_val_b.csv'\n",
     "\n",
-    "TEST_DATAPATH = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/proteomeTools_test.csv'\n",
-    "TEST_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/split_a/proteomeTools_test_a.csv'\n",
-    "TEST_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/split_b/proteomeTools_test_b.csv'"
+    "TEST_DATAPATH_A = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/feature_a/proteomeTools_test_a.csv'\n",
+    "TEST_DATAPATH_B = 'https://raw.githubusercontent.com/wilhelm-lab/dlomix-resources/main/example_datasets/RetentionTime/feature_b/proteomeTools_test_b.csv'"
    ]
   },
   {
@@ -111,14 +102,14 @@
     "\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "rtdata = RetentionTimeDataset(data_source=TRAIN_DATAPATH,\n",
+    "rtdata = RetentionTimeDataset(data_source=TRAIN_DATAPATH_B,target_col='retention_time',\n",
     "                              seq_length=30, batch_size=BATCH_SIZE, val_ratio=0.2)\n",
     "\n",
     "\n",
     "# this is the test dataset object, do not forget to change it to the respective suffix (A or B)\n",
     "# when you change the training dataset\n",
     "\n",
-    "test_rtdata = RetentionTimeDataset(data_source=TEST_DATAPATH,\n",
+    "test_rtdata = RetentionTimeDataset(data_source=TEST_DATAPATH_B,target_col='retention_time',\n",
     "                              seq_length=30, batch_size=BATCH_SIZE, test=True)"
    ]
   },
@@ -129,12 +120,12 @@
    "outputs": [],
    "source": [
     "# Enter weights and biases run name. Make sure that different splits rates have different run names.\n",
-    "wandb.init(project=project_name, name='data_split_name')\n",
+    "wandb.init(project=project_name, name='data_split_b')\n",
     "\n",
     "# create model\n",
     "model = RetentionTimePredictor(seq_length=30)\n",
     "\n",
-    "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-4)\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=1e-3)\n",
     "\n",
     "# compile the model  with the optimizer and the metrics we want to use, we can add our custom time-delta metric\n",
     "\n",
@@ -142,7 +133,7 @@
     "            loss='mse', metrics=['mean_absolute_error', TimeDeltaMetric()])\n",
     "\n",
     "history = model.fit(rtdata.train_data, validation_data=rtdata.val_data, epochs=15,\n",
-    "                   callbacks=[WandbCallback(save_model=False)])\n",
+    "                    callbacks=[WandbCallback(save_model=False)])\n",
     "\n",
     "\n",
     "# Mark the run as finished\n",
