--- a/notebooks/Intensity/tasks/4_DataSplit.ipynb
+++ b/notebooks/Intensity/tasks/4_DataSplit.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q git+https://github.com/wilhelm-lab/dlomix.git@feature/intensity_tutorial"
+    "!python -m pip install -q dlomix==0.0.4"
    ]
   },
   {
@@ -169,7 +169,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
