--- a/notebooks/RetentionTime/tasks/5_Calibration.ipynb
+++ b/notebooks/RetentionTime/tasks/5_Calibration.ipynb
@@ -12,11 +12,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 4: Data Split\n",
-    "Similar to the initial notebook, we will initialize our model and train it. The target here is to experiment with different data splits and observe the impact on the performance and whether it reflects a realistic evaluation. "
+    "### Task 5: Calibration\n",
+    "Similar to the initial notebook, we will initialize our model and train it. The target here is to experiment with different features and observe the impact on the performance and see which features produce better results."
    ]
   },
   {
@@ -27,7 +28,7 @@
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q dlomix==0.0.3"
+    "!python -m pip install -q dlomix==0.0.4"
    ]
   },
   {
@@ -141,14 +142,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Bonus:\n",
-    "After analyzing the results, can you figure out what is wrong with these splits and how different are they from each other?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -172,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
