--- a/notebooks/Intensity/tasks/3_ModelArchitecture.ipynb
+++ b/notebooks/Intensity/tasks/3_ModelArchitecture.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# install the mlomix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q git+https://github.com/wilhelm-lab/dlomix.git@feature/intensity_tutorial"
+    "!python -m pip install -q dlomix==0.0.4"
    ]
   },
   {
