--- a/notebooks/RetentionTime/Example_RTModel_Walkthrough_colab.ipynb
+++ b/notebooks/RetentionTime/Example_RTModel_Walkthrough_colab.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "# install the DLOmix package in the current environment using pip\n",
     "\n",
-    "!python -m pip install -q dlomix==0.0.3"
+    "!python -m pip install -q dlomix==0.0.4"
    ]
   },
   {
@@ -89,6 +89,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import dlomix\n",
+    "import wandb\n",
+    "from wandb.keras import WandbCallback\n",
+    "\n",
     "from dlomix import constants, data, eval, layers, models, pipelines, reports, utils\n",
     "print([x for x in dir(dlomix) if not x.startswith(\"_\")])"
    ]
@@ -950,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
